// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Anciennete /> should display error if anciennté < 8mois 1`] = `
<div
  class="alert "
>
  L’indemnité de licenciement est dûe au-delà de 8 mois d’ancienneté
</div>
`;

exports[`<Anciennete /> should display error if anciennté < 12mois and licenciement in 2017 1`] = `
<div
  class="alert "
>
  L’indemnité de licenciement est dûe au-delà de 12 mois d’ancienneté
</div>
`;

exports[`<Anciennete /> should display error if dateEntre > dateSortie 1`] = `
<div
  class="alert "
>
  La date de sortie doit se situer après le
  <strong>
     
    02 April 2018
  </strong>
</div>
`;

exports[`<Anciennete /> should display error if dateNotif > dateSortie 1`] = `
<div
  class="alert "
>
  La date de notification doit se situer avant la date de sortie
</div>
`;

exports[`<Anciennete /> should render 1`] = `
.c0 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 1.25rem;
}

.c0 > *:last-child {
  margin-bottom: 0;
}

.c3 {
  padding: 0;
  font-size: 1rem;
  text-align: center;
  line-height: inherit;
  width: NaNem;
  border-radius: 0.25rem;
  border: 1px solid #c9d3df;
  padding: 0.625rem 0.25rem;
  border-color: #c9d3df;
}

.c6 {
  padding: 0;
  text-align: center;
  font-size: 1.24rem;
  margin-right: 2em;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  font-size: 1.1rem;
  display: block;
  margin-top: 1.25rem;
  margin-bottom: 0.625rem;
}

.c4 {
  font-size: 1.1rem;
  display: block;
  margin-top: 1.25rem;
  margin-bottom: 0.625rem;
}

.c1 {
  font-size: 1.4rem;
  margin-top: 2rem;
  margin-bottom: 1.25rem;
}

@media print {
  .c0 {
    max-width: 100%;
    padding: 0;
  }
}

<div>
  <div
    class="c0"
  >
    <h2
      class="c1"
    >
      Dates d’entrée et de sortie de l’entreprise
    </h2>
    <label
      class="c2"
      for="1"
    >
      Quelle est votre date d’entrée dans l’entreprise ?
    </label>
    <input
      class="c3"
      id="1"
      name="dateEntree"
      type="date"
      value=""
    />
    <label
      class="c2"
      for="2"
    >
      À quelle date votre licenciement vous a-t-il été notifié ?
    </label>
    <input
      class="c3"
      id="2"
      name="dateNotification"
      type="date"
      value=""
    />
    <label
      class="c2"
      for="3"
    >
      Quelle est votre date de sortie de l’entreprise (incluant la durée de votre préavis) ?
    </label>
    <input
      class="c3"
      id="3"
      name="dateSortie"
      type="date"
      value=""
    />
    <h2
      class="c1"
    >
      Période d’absence prolongée (plus d’un mois)
    </h2>
    <p
      class="c4"
    >
      Avez-vous eu des périodes d’absence de plus d’un mois au cours de votre contrat ?
    </p>
    <div
      class="c5"
    >
      <label
        class="c6"
      >
        <input
          name="hasAbsenceProlonge"
          type="radio"
          value="true"
        />
        <span>
          Oui
        </span>
      </label>
      <label
        class="c6"
      >
        <input
          name="hasAbsenceProlonge"
          type="radio"
          value="false"
        />
        <span>
          Non
        </span>
      </label>
    </div>
  </div>
</div>
`;
